# sage_raglib

./: .gitignore  README.md  RRC.ipynb  Raglib.py  Untitled.ipynb  _rrc_tests.ipynb  _tests.ipynb  extras.py  helpers.py  msolve.py  multi_modular.py  pyproject.toml  raglib.py  rrc.py  subroutines.py
.github/workflows/: python-publish.yml
.ipynb_checkpoints/: RRC-checkpoint.ipynb  Untitled-checkpoint.ipynb
src/raglib/: __init__.py  helpers.py  msolve.py  multi_modular.py  raglib.py  rrc.py  subroutines.py
