[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raglib"
version = "0.1.0"
description = "Real Algebraic Geometry"
authors = [{ name="Andrew Luo", email="j92luo@uwaterloo.ca" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]